--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ nav ul li a:hover{
     width: 100%;
 }
 .feature .container{
-    grid-gap: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -107,6 +106,7 @@ nav ul li a:hover{
     transition: .4s;
     border-radius: 8px;
     font-weight: 600;
+    margin:0 10px;
 }
 .feature .container .item:hover{
     background-color: rgb(93, 184, 97);
